# fil

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: format.yml
include/: fil_io.h  fil_iter.h  fil_time.h  fil_util.h  libfil.h  libsil.h  sil_io.h  sil_iter.h
python/: filmodule.c  pyproject.toml  setup.py
src/: cli.c  gpu_io.cu  io.c  iter.c
toolbox/: pre-commit-check.sh
